# wash

./: .ci.yml  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  release.yml
src/: cli.rs  internals.rs  interpreter.rs  lib.rs  output_device.rs  saved_fd.rs  shell_base.rs
src/cli/: event_source.rs  internal_reader.rs  mod.rs
src/saved_fd/: unix.rs  wasi.rs
