[package]
authors = [
    "Tomasz Karwowski <tkarwowski@internships.antmicro.com",
    "Peter Gielda <pgielda@antmicro.com",
]
edition = "2018"
name = "wash"
version = "0.1.0"

[dependencies]
clap = "3"
conch-parser = "0.1"
color-eyre = "0.5"
lazy_static = "1"
regex = "1"
zip = "0.5.13"
glob = "0.3"

[target.'cfg(target_os = "wasi")'.dependencies]
wasi_ext_lib = { git = "https://github.com/antmicro/wasi_ext_lib.git", branch = "main", features = ["hterm"] }

[dependencies.iterm2]
git = "https://github.com/Noskcaj19/iterm2"

[profile]
[profile.release]
opt-level = "s"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
command-fds = "0.2.2"
libc = "0.2.126"
os_pipe = "1.0.1"

[net]
git-fetch-with-cli = true
