[package]
author_email='contact@antmicro.com'
edition = "2018"
name = "wash"
version = "0.1.6"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.4", features = ["string"] }
conch-parser = { git = "https://github.com/antmicro/conch-parser.git", branch = "master" }
color-eyre = "0.5"
lazy_static = "1"
regex = "1"
glob = "0.3"
vte = "0.13.0"

[target.'cfg(target_os = "wasi")'.dependencies]
wasi_ext_lib = { git = "https://github.com/antmicro/wasi_ext_lib.git", branch = "main", features = ["hterm"] }
wasi = "0.11.0"

[profile]
[profile.release]
opt-level = "s"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
command-fds = "0.2.2"
nix = "0.26.2"
os_pipe = "1.0.1"

[net]
git-fetch-with-cli = true
